--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -32,8 +32,9 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="match_parent"
-                    android:layout_height="22dp"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center|center_horizontal|center_vertical"
                     android:gravity="center|center_horizontal|center_vertical"
                     android:letterSpacing="0.05"
@@ -42,6 +43,7 @@
                     android:textSize="17sp" />
 
                 <TextView
+                    android:fontFamily="@font/nanumsquarebold"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="48dp"
@@ -50,8 +52,7 @@
                     android:letterSpacing="0.05"
                     android:text="필수적 접근 권한"
                     android:textColor="#3e3e3e"
-                    android:textSize="16sp"
-                    android:textStyle="bold"/>
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <!-- 전화 -->
@@ -83,6 +84,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:fontFamily="@font/nanumsquareregular"
                         android:layout_width="match_parent"
                         android:layout_height="22dp"
                         android:layout_gravity="center|center_horizontal|center_vertical"
@@ -93,6 +95,7 @@
                         android:textSize="16sp" />
 
                     <TextView
+                        android:fontFamily="@font/nanumsquareregular"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
@@ -100,7 +103,7 @@
                         android:gravity="left|center_horizontal|center_vertical"
                         android:letterSpacing="0.05"
                         android:text="휴대폰 번호 인증"
-                        android:textColor="#3e3e3e"
+                        android:textColor="#993e3e3e"
                         android:textSize="14sp"/>
                 </LinearLayout>
             </LinearLayout>
@@ -134,6 +137,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:fontFamily="@font/nanumsquareregular"
                         android:layout_width="match_parent"
                         android:layout_height="22dp"
                         android:layout_gravity="center|center_horizontal|center_vertical"
@@ -144,6 +148,7 @@
                         android:textSize="16sp" />
 
                     <TextView
+                        android:fontFamily="@font/nanumsquareregular"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
@@ -151,7 +156,7 @@
                         android:gravity="left|center_horizontal|center_vertical"
                         android:letterSpacing="0.05"
                         android:text="출발지 및 목적지 설정"
-                        android:textColor="#3e3e3e"
+                        android:textColor="#993e3e3e"
                         android:textSize="14sp"/>
                 </LinearLayout>
             </LinearLayout>
@@ -165,6 +170,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:fontFamily="@font/nanumsquarebold"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center|center_horizontal|center_vertical"
@@ -205,6 +211,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="match_parent"
                     android:layout_height="22dp"
                     android:layout_gravity="center|center_horizontal|center_vertical"
@@ -215,6 +222,7 @@
                     android:textSize="16sp" />
 
                 <TextView
+                    android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
@@ -222,7 +230,7 @@
                     android:gravity="left|center_horizontal|center_vertical"
                     android:letterSpacing="0.05"
                     android:text="예약 완료 및 혜택 알림"
-                    android:textColor="#3e3e3e"
+                    android:textColor="#993e3e3e"
                     android:textSize="14sp"/>
             </LinearLayout>
         </LinearLayout>
@@ -235,13 +243,14 @@
             android:orientation="vertical">
 
             <TextView
+                android:fontFamily="@font/nanumsquareregular"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center|center_horizontal|center_vertical"
                 android:gravity="left|center_horizontal|center_vertical"
                 android:lineSpacingExtra="5sp"
                 android:text="선택적 접근권한은 기능 사용 시 허용이 필요하며, 비 허용시에도 해당 기능 외 서비스 이용이 가능합니다."
-                android:textColor="#2a2a2a"
+                android:textColor="#992a2a2a"
                 android:textSize="14sp"/>
         </LinearLayout>
     </LinearLayout>
@@ -259,6 +268,7 @@
 
         <Button
             android:id="@+id/splash_btn"
+            android:fontFamily="@font/nanumsquareregular"
             android:layout_width="280dp"
             android:layout_height="52dp"
             android:layout_gravity="center"
