--- a/app/src/main/res/layout/activity_car_manage.xml
+++ b/app/src/main/res/layout/activity_car_manage.xml
@@ -99,7 +99,7 @@
             android:gravity="center|center_horizontal|center_vertical"
             android:text="차량을 등록해주세요."
             android:textSize="16sp"
-            android:textColor="#3e3e3e"
+            android:textColor="#993e3e3e"
             />
 
         />
