--- a/app/src/main/res/layout/activity_my_profile_settings.xml
+++ b/app/src/main/res/layout/activity_my_profile_settings.xml
@@ -45,7 +45,7 @@
                 android:layout_marginLeft="8dp"
                 android:text="010.4343.8585"
                 android:textSize="14sp"
-                android:textColor="#3e3e3e"
+                android:textColor="#b33e3e3e"
                 android:letterSpacing="0.05" />
         </LinearLayout>
 
