--- a/app/src/main/res/layout/activity_notice.xml
+++ b/app/src/main/res/layout/activity_notice.xml
@@ -79,7 +79,7 @@
             android:gravity="center|center_horizontal|center_vertical"
             android:text="등록된 공지사항이 없습니다."
             android:textSize="16sp"
-            android:textColor="#3e3e3e"
+            android:textColor="#993e3e3e"
             />
 
         />
