--- a/app/src/main/res/layout/activity_notice_detail.xml
+++ b/app/src/main/res/layout/activity_notice_detail.xml
@@ -109,7 +109,7 @@
                     android:layout_gravity="left|center_horizontal|center_vertical"
                     android:letterSpacing="0.05"
                     android:text="2020.03.05"
-                    android:textColor="@color/textColorPrimary"
+                    android:textColor="#b33e3e3e"
                     android:textSize="13sp" />
             </LinearLayout>
         </LinearLayout>
