--- a/app/src/main/res/layout/activity_point_history.xml
+++ b/app/src/main/res/layout/activity_point_history.xml
@@ -238,7 +238,7 @@
             android:gravity="center|center_horizontal|center_vertical"
             android:text="포인트 이용 내역이 없습니다."
             android:textSize="16sp"
-            android:textColor="#3e3e3e"
+            android:textColor="#993e3e3e"
             />
 
         />
