--- a/app/src/main/res/layout/activity_reservation_time.xml
+++ b/app/src/main/res/layout/activity_reservation_time.xml
@@ -53,7 +53,7 @@
             android:gravity="center|center_horizontal|center_vertical"
             android:text="대리점 정보가 없습니다."
             android:textSize="16sp"
-            android:textColor="#3e3e3e"
+            android:textColor="#993e3e3e"
             />
 
         />
