--- a/app/src/main/res/layout/login_layout_pre.xml
+++ b/app/src/main/res/layout/login_layout_pre.xml
@@ -55,7 +55,7 @@
             android:layout_marginEnd="40dp"
             android:gravity="center_horizontal|center_vertical"
             android:text="@string/login_text2"
-            android:textColor="#3e3e3e"
+            android:textColor="#993e3e3e"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
