--- a/app/src/main/res/layout/use_list_item.xml
+++ b/app/src/main/res/layout/use_list_item.xml
@@ -57,7 +57,7 @@
                     android:layout_height="18dp"
                     android:gravity="left|center_horizontal|center_vertical"
                     android:text="예약 시간"
-                    android:textColor="#3e3e3e"
+                    android:textColor="#993e3e3e"
                     android:textSize="14sp" />
             </LinearLayout>
 
@@ -101,7 +101,7 @@
                     android:layout_height="18dp"
                     android:gravity="left|center_horizontal|center_vertical"
                     android:text="세차 장소"
-                    android:textColor="#3e3e3e"
+                    android:textColor="#993e3e3e"
                     android:textSize="14sp" />
             </LinearLayout>
 
@@ -145,7 +145,7 @@
                     android:layout_height="18dp"
                     android:gravity="left|center_horizontal|center_vertical"
                     android:text="대리점"
-                    android:textColor="#3e3e3e"
+                    android:textColor="#993e3e3e"
                     android:textSize="14sp" />
             </LinearLayout>
 
@@ -206,7 +206,7 @@
                     android:layout_height="18dp"
                     android:gravity="left|center_horizontal|center_vertical"
                     android:text="이용 요금"
-                    android:textColor="#3e3e3e"
+                    android:textColor="#993e3e3e"
                     android:textSize="14sp" />
             </LinearLayout>
 <!--
