--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -104,7 +104,7 @@
                 android:layout_width="0dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="24dp"
-                android:drawableTop="@drawable/group_13"
+                android:drawableTop="@drawable/main_steam_image"
                 android:text="@string/main_menu_1"
                 app:layout_constraintEnd_toStartOf="@+id/btnMainMenu2"
                 app:layout_constraintStart_toStartOf="parent"
@@ -119,7 +119,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="24dp"
-                android:drawableTop="@drawable/wheel"
+                android:drawableTop="@drawable/main_drive_image"
                 android:text="@string/main_menu_2"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/btnMainMenu1"
@@ -133,7 +133,7 @@
                 android:layout_width="0dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="20dp"
-                android:drawableTop="@drawable/key"
+                android:drawableTop="@drawable/main_share_image"
                 android:text="@string/main_menu_3"
                 app:layout_constraintEnd_toStartOf="@+id/btnMainMenu4"
                 app:layout_constraintStart_toStartOf="parent"
@@ -148,7 +148,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="24dp"
-                android:drawableTop="@drawable/car"
+                android:drawableTop="@drawable/main_car_image"
                 android:text="@string/main_menu_4"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/btnMainMenu3"
@@ -162,7 +162,7 @@
                 android:layout_width="0dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="20dp"
-                android:drawableTop="@drawable/shipped"
+                android:drawableTop="@drawable/main_quick_image"
                 android:text="@string/main_menu_5"
                 app:layout_constraintEnd_toStartOf="@+id/btnMainMenu6"
                 app:layout_constraintStart_toStartOf="parent"
@@ -177,7 +177,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="24dp"
-                android:drawableTop="@drawable/scooter"
+                android:drawableTop="@drawable/main_rider_image"
                 android:text="@string/main_menu_6"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/btnMainMenu5"
