--- a/app/src/main/res/layout/activity_myinfo_recom.xml
+++ b/app/src/main/res/layout/activity_myinfo_recom.xml
@@ -421,7 +421,7 @@
 
                         <TextView
                             android:layout_width="wrap_content"
-                            android:layout_height="17dp"
+                            android:layout_height="wrap_content"
                             android:layout_gravity="center|center_horizontal|center_vertical"
                             android:gravity="center"
                             android:letterSpacing="0.05"
@@ -488,7 +488,7 @@
                             android:layout_height="match_parent"
                             android:background="@null"
                             android:ems="10"
-                            android:hint="FCF81"
+                            android:hint="FCF811"
                             android:textColor="#3E3E3E"
                             android:gravity="center"
                             android:textSize="15sp"
