--- a/app/src/main/res/layout/member_join_recom.xml
+++ b/app/src/main/res/layout/member_join_recom.xml
@@ -93,8 +93,7 @@
             android:background="@null"
             android:ems="10"
             android:hint="@string/member_join_recom"
-            android:inputType="number"
-            android:digits="0123456789"
+            android:inputType="text"
             android:maxLength="20"
             android:textColor="#3E3E3E"
             android:textSize="15sp"
