0. - 포인트 결재시 이용내역에서 안보여짐.      => 파라메터 추가하고 Interface 및  UI 추가. 1. - 0원 결재(얼마부터 결재 되는지 체크)      => 0원일때 서버에 데이터 전송 2. - 대리점 시간 보여줄 때 예약 가능한것만 보여주기 3. - 대리점 검색시 비 활동지역 표시.

--- a/app/src/main/res/layout/activity_use_detail.xml
+++ b/app/src/main/res/layout/activity_use_detail.xml
@@ -219,6 +219,53 @@
             </LinearLayout>
         </LinearLayout>
 
+        <!-- 포인트 요금 -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="16.5dp"
+            android:orientation="horizontal"
+            tools:ignore="MissingConstraints">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_gravity="center|center_horizontal|center_vertical"
+                android:orientation="vertical">
+
+                <TextView
+                    android:fontFamily="@font/nanumsquareregular"
+                    android:layout_width="match_parent"
+                    android:layout_height="18dp"
+                    android:layout_gravity="left|center_horizontal|center_vertical"
+                    android:letterSpacing="0.05"
+                    android:text="포인트"
+                    android:textColor="#b33e3e3e"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_gravity="center|center_horizontal|center_vertical"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/use_point_pay"
+                    android:fontFamily="@font/nanumsquarebold"
+                    android:layout_width="match_parent"
+                    android:layout_height="18dp"
+                    android:gravity="right"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:letterSpacing="0.05"
+                    android:text="2,000원"
+                    android:textColor="@color/textColorPrimary"
+                    android:textSize="14sp" />
+            </LinearLayout>
+        </LinearLayout>
+
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
