--- a/app/src/main/res/layout/coupone_list_item.xml
+++ b/app/src/main/res/layout/coupone_list_item.xml
@@ -10,6 +10,8 @@
         android:id="@+id/coupone_layout"
         android:layout_width="match_parent"
         android:layout_height="124dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
         android:layout_gravity="center|center_horizontal|center_vertical"
         android:background="@drawable/default_background_type_2"
         android:gravity="center|center_vertical|center_horizontal"
@@ -20,18 +22,21 @@
             android:fontFamily="@font/nanumsquareextrabold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
+            android:layout_marginLeft="24dp"
             android:gravity="left|center_horizontal|center_vertical"
             android:text="2000원"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:textColor="#3e3e3e"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:autoSizeTextType="uniform"/>
 
         <TextView
             android:id="@+id/coupone_column2"
             android:fontFamily="@font/nanumsquareregular"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
+            android:layout_marginLeft="24dp"
             android:layout_marginTop="5dp"
             android:gravity="left|center_horizontal|center_vertical"
             android:text="추천인 쿠폰"
@@ -43,7 +48,7 @@
             android:fontFamily="@font/nanumsquareregular"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
+            android:layout_marginLeft="24dp"
             android:layout_marginTop="13dp"
             android:gravity="left|center_horizontal|center_vertical"
             android:text="~2020.12.30"
@@ -55,10 +60,12 @@
             android:fontFamily="@font/nanumsquareregular"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
+            android:layout_marginLeft="24dp"
             android:layout_marginTop="6dp"
             android:gravity="left|center_horizontal|center_vertical"
             android:text="회원 가입을 축하해요!"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:textColor="#b33e3e3e"
             android:textSize="12sp" />
         <!--
@@ -88,6 +95,6 @@
         android:id="@+id/coupone_list_item_divider"
         android:layout_width="match_parent"
         android:layout_height="20dp"
-        android:background="#333e3e3e" />
+        android:background="#33ffffff" />
 
 </LinearLayout>
