--- a/app/src/main/res/layout/use_list_item.xml
+++ b/app/src/main/res/layout/use_list_item.xml
@@ -118,6 +118,7 @@
                     android:layout_height="18dp"
                     android:gravity="left|center_horizontal|center_vertical"
                     android:text="송파구 석촌호수로 274 (실내)"
+                    android:ellipsize="marquee"
                     android:textColor="#3e3e3e"
                     android:textSize="14sp" />
             </LinearLayout>
@@ -158,10 +159,12 @@
                 <TextView
                     android:id="@+id/use_column7"
                     android:fontFamily="@font/nanumsquareregular"
-                    android:layout_width="match_parent"
+                    android:layout_width="140dp"
                     android:layout_height="18dp"
                     android:gravity="left|center_horizontal|center_vertical"
                     android:text="관악 1호점 (김태현) "
+                    android:ellipsize="marquee"
+                    android:singleLine="true"
                     android:textColor="#3e3e3e"
                     android:textSize="14sp" />
             </LinearLayout>
@@ -169,14 +172,14 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="11dp"
+                android:layout_marginRight="11dp"
                 android:gravity="right|center_horizontal|center_vertical">
 
                 <TextView
                     android:id="@+id/use_column8"
-                    android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="match_parent"
                     android:layout_height="18dp"
+                    android:fontFamily="@font/nanumsquareregular"
                     android:gravity="center|center_horizontal|center_vertical"
                     android:text="전화걸기"
                     android:textColor="#007aff"
