--- a/app/src/main/res/layout/activity_coupone.xml
+++ b/app/src/main/res/layout/activity_coupone.xml
@@ -70,6 +70,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:orientation="vertical"
+        android:gravity="center|center_horizontal|center_vertical"
         android:visibility="gone">
 
         <TextView
