--- a/app/src/main/res/layout/activity_password_change.xml
+++ b/app/src/main/res/layout/activity_password_change.xml
@@ -116,7 +116,6 @@
 
         <EditText
             android:id="@+id/new_password1"
-            android:fontFamily="@font/nanumsquareregular"
             android:layout_width="216dp"
             android:layout_height="match_parent"
             android:layout_marginStart="16dp"
@@ -127,7 +126,7 @@
             android:layout_weight="1"
             android:ems="10"
             android:nextFocusDown="@+id/new_password2"
-            android:inputType="textVisiblePassword"
+            android:inputType="textPassword"
             android:imeOptions="actionNext"/>
     </LinearLayout>
 
@@ -253,14 +252,13 @@
 
         <EditText
             android:id="@+id/new_password2"
-            android:fontFamily="@font/nanumsquareregular"
             android:layout_width="216dp"
             android:layout_height="match_parent"
             android:layout_marginStart="16dp"
             android:layout_weight="1"
             android:ems="10"
             android:hint="@string/hint_new_password2"
-            android:inputType="textVisiblePassword"
+            android:inputType="textPassword"
             android:imeOptions="actionDone"
             android:background="@null"
             android:textColor="#3E3E3E"
