--- a/app/src/main/res/layout/activity_myinfo_detail.xml
+++ b/app/src/main/res/layout/activity_myinfo_detail.xml
@@ -230,7 +230,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="167dp"
+                    android:layout_width="match_parent"
                     android:layout_height="72dp"
                     android:layout_gravity="right"
                     android:gravity="right|center_vertical|center_horizontal">
@@ -238,7 +238,7 @@
                     <TextView
                         android:id="@+id/myinfo_btnNext"
                         android:fontFamily="@font/nanumsquareregular"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="24dp"
                         android:layout_marginRight="5dp"
                         android:gravity="right|clip_horizontal|center_vertical"
