--- a/app/src/main/res/layout/activity_use_detail.xml
+++ b/app/src/main/res/layout/activity_use_detail.xml
@@ -369,7 +369,7 @@
                         android:layout_width="56dp"
                         android:layout_height="18dp"
                         android:gravity="left|center_horizontal|center_vertical"
-                        android:text="예약 시간"
+                        android:text="예약시간"
                         android:textColor="#993e3e3e"
                         android:textSize="14sp" />
                 </LinearLayout>
@@ -411,7 +411,7 @@
                         android:layout_width="56dp"
                         android:layout_height="18dp"
                         android:gravity="left|center_horizontal|center_vertical"
-                        android:text="세차 장소"
+                        android:text="세차장소"
                         android:textColor="#993e3e3e"
                         android:textSize="14sp" />
                 </LinearLayout>
@@ -467,10 +467,11 @@
                     <TextView
                         android:id="@+id/use_wash_agent"
                         android:fontFamily="@font/nanumsquareregular"
-                        android:layout_width="match_parent"
+                        android:layout_width="160dp"
                         android:layout_height="18dp"
                         android:gravity="left|center_horizontal|center_vertical"
                         android:text="관악 1호점 (김태현) "
+                        android:ellipsize="marquee"
                         android:textColor="#3e3e3e"
                         android:textSize="14sp" />
                 </LinearLayout>
@@ -513,7 +514,7 @@
                         android:layout_width="56dp"
                         android:layout_height="18dp"
                         android:gravity="left|center_horizontal|center_vertical"
-                        android:text="차량 정보"
+                        android:text="차량정보"
                         android:textColor="#993e3e3e"
                         android:textSize="14sp" />
                 </LinearLayout>
