- 결재방식 수정 - 이용 내역 수정

--- a/app/src/main/res/layout/use_list_item.xml
+++ b/app/src/main/res/layout/use_list_item.xml
@@ -237,10 +237,11 @@
                 <TextView
                     android:id="@+id/use_column10"
                     android:fontFamily="@font/nanumsquareregular"
-                    android:layout_width="match_parent"
+                    android:layout_width="100dp"
                     android:layout_height="18dp"
                     android:gravity="left|center_horizontal|center_vertical"
                     android:text="43,000원"
+                    android:maxLines="1"
                     android:textColor="#3e3e3e"
                     android:textSize="14sp" />
             </LinearLayout>
