--- a/app/src/main/res/layout/activity_use_detail.xml
+++ b/app/src/main/res/layout/activity_use_detail.xml
@@ -470,7 +470,8 @@
                         android:layout_height="18dp"
                         android:gravity="left|center_horizontal|center_vertical"
                         android:text="관악 1호점 (김태현) "
-                        android:ellipsize="marquee"
+                        android:maxLines="1"
+                        android:ellipsize="end"
                         android:textColor="#3e3e3e"
                         android:textSize="14sp" />
                 </LinearLayout>
